--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="intro">
         <h3>By Austin Chen</h3>
     </div>
+    <a href="https://hihellothere1011.github.io/crapy_website_main/" class="main">Back to the main page</a>
     <div class="docs">
         <h2>
             The world is changing, everyone is playing with the
