--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     
 </head>
 <body>
-    <a href="https://hihellothere1011.github.io/Austins_main/" class="main">←</a>
+    <button><a href="https://hihellothere1011.github.io/Austins_main"</button>
     <div class="docs">
-        <h2>
-                <span class="large-text"><b>GAME!!!!</b></span>
+        <span class="large-text"><b>GAME Time</b></span>
+        <span class="large-text"><b>Have Fun!</b></span>
     </div>
     
     <span class="game-text">Game:</span>
