--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
 </head>
 <body>
-    <button><a href="https://hihellothere1011.github.io/Austins_main"</button>
+    <button><a href="https://hihellothere1011.github.io/Austins_main">⏪</a></button>
     <div class="docs">
         <span class="large-text"><b>GAME Time</b></span>
         <span class="large-text"><b>Have Fun!</b></span>
