--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <button><a href="https://hihellothere1011.github.io/Austins_main">⏪</a></button>
     <div class="docs">
-        <span class="large-text"><b>GAME Time</b></span>
+        <span class="large-text"><b>GAME Time</b></span><br>
         <span class="large-text"><b>Have Fun!</b></span>
     </div>
     
