--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <button><a href="https://hihellothere1011.github.io/Austins_main">⏪</a></button>
     <div class="docs">
         <span class="large-text"><b>GAME Time</b></span><br>
-        <span class="large-text"><b>Have Fun!</b></span>
+        <span class="large-text"><b>Have Fun</b></span>
     </div>
     
     <span class="game-text">Game:</span>
     <div class="gamebuttons">
         <button id="PLAYbutton">
             PLAY!<br>
-            color game!
+            color game
         </button>
         <button id="secret" >
             PLAY!<br>
-            secret game!
+            secret game
             <a href="https://media.tenor.com/lQxToHbuUNwAAAAM/rick-roll.gif" target="_blank">
             </a>
         </button>
